--- a/business.html
+++ b/business.html
@@ -185,7 +185,7 @@
 							<figure>
 								<img src="assets/images/service/img_1.jpg" alt="" />
 							</figure>
-							<h3><a href="corporateoffices.html">Corporate offices</a></h3>
+							<h3><a href="#">Corporate offices</a></h3>
 							<p>Calvin Janitorial has been serving the corporate industries with its cleaning solution for over 5 years. 
 We have different cleaning package available for different office sizes and cleaning works. A clean 
 corporation shows professionalism and dedication, hence serve as an essential part in bringing new 
