--- a/services.html
+++ b/services.html
@@ -156,10 +156,9 @@
 			<div class="container">
 				<div class="row title">
 					<div class="title_row">
-						<h1 data-title="Service"><span>Service</span></h1>
+						<h1 data-title="Service"><span>Corporate offices</span></h1>
 						<div class="page-breadcrumb">
-							<a>Home</a>/ <span>Corporate offices</span>
-						</div>
+													</div>
 
 					</div>
 
