--- a/services.html
+++ b/services.html
@@ -195,12 +195,8 @@
 							<figure>
 								<img src="assets/images/service/img_2.jpg" alt="" />
 							</figure>
-							<h3><a href="#">Commercial property</a></h3>
-							<p>Our company provide wide variety of services covering majority of the needs of a commercial 
-environment. Calvin janitorial always welcome new challenges which help us to offer more techniques 
-on the table. We provide commercial cleaning contracts at competitive and affordable rates. We work 
-alongside the employees and customers to provide them the convenient and professional service 
-possible</p>
+							<h3><a href="commercialproperty.html">Commercial property</a></h3>
+							
 						</div>
 					</div>
 
@@ -209,18 +205,8 @@ possible</p>
 							<figure>
 								<img src="assets/images/service/img_3.jpg" alt="" />
 							</figure>
-							<h3><a href="#">Business</a></h3>
-							<p>We pleased to offer specialised staff who are skilled and experienced in different categories of business. 
-Our company hold wide variety of cleaning supplies and machinery which are qualified as top of the 
-market with the employees specialised in operating it to the full potential. Some of our specialised 
-services are as follows :-
-<br> 
-● Childcare cleaning. <br> 
-● Gym and athletic center cleaning <br> 
-● School and university cleaning. <br> 
-● Retail and shopping complex cleaning. <br> 
-● Cinema and theatre cleaning. <br> 
-● Hospital and day care cleaning. </p>
+							<h3><a href="business.html">Business</a></h3>
+							
 						</div>
 					</div>
 
@@ -229,12 +215,8 @@ services are as follows :-
 							<figure>
 								<img src="assets/images/service/img_6.jpg" alt="" />
 							</figure>
-							<h3><a href="#">Building Cleaning</a></h3>
-							<p>Calvin Janitorial also provide on time service to apartment building and town homes. Our one of a kind 
-service focus on thorough cleaning by working alongside with the tenants and habitats. We understand 
-the importance of safe and healthy atmosphere needed in any kind of habitat. Therefore, we clean it by 
-considering as our own home. </p>
-						</div>
+							<h3><a href="buildingcleaning.html">Building Cleaning</a></h3>
+													</div>
 					</div>
 
 									</div>
