--- a/buildingcleaning.html
+++ b/buildingcleaning.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Services Calvin Janitorial</title>
+		<title>Building Cleaning Services Calvin Janitorial</title>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700" rel="stylesheet">
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -156,7 +156,7 @@
 			<div class="container">
 				<div class="row title">
 					<div class="title_row">
-						<h1 data-title="Service"><span>Service</span></h1>
+						<h1 data-title="Service"><span>Building Cleaning</span></h1>
 						<div class="page-breadcrumb">
 							<a>Home</a>/ <span>Service</span>
 						</div>
