--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                                                 <a href="index.html">Home</a> 
                                                                 </li>
 								<li>
-                                                                <a href="aboutus.html">About us</a>
+                                                                <a href="about-us.html">About us</a>
                                                                 </li>
                                                                 <li>
                                                                 <a href="services.html">Servies</a> 
@@ -577,7 +577,7 @@ centers, daycare centers, athletic clubs and gyms. </p>
                                                                 <a href="index.html">Home</a> 
                                                                 </li>
 								<li>
-                                                                <a href="aboutus.html">About us</a>
+                                                                <a href="about-us.html">About us</a>
                                                                 </li>
                                                                 <li>
                                                                 <a href="services.html">Servies</a> 
