--- a/services.html
+++ b/services.html
@@ -129,7 +129,7 @@
                                                                 <a href="index.html">Home</a> 
                                                                 </li>
 								<li>
-                                                                <a href="aboutus.html">About us</a>
+                                                                <a href="about-us.html">About us</a>
                                                                 </li>
                                                                 <li>
                                                                 <a href="services.html">Servies</a> 
@@ -250,7 +250,7 @@
                                                                 <a href="index.html">Home</a> 
                                                                 </li>
 								<li>
-                                                                <a href="aboutus.html">About us</a>
+                                                                <a href="about-us.html">About us</a>
                                                                 </li>
                                                                 <li>
                                                                 <a href="services.html">Servies</a> 
