--- a/commercialproperty.html
+++ b/commercialproperty.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	
 
@@ -129,7 +129,7 @@
                                                                 <a href="index.html">Home</a> 
                                                                 </li>
 								<li>
-                                                                <a href="aboutus.html">About us</a>
+                                                                <a href="about-us.html">About us</a>
                                                                 </li>
                                                                 <li>
                                                                 <a href="services.html">Servies</a> 
@@ -271,7 +271,7 @@ considering as our own home. </p>
                                                                 <a href="index.html">Home</a> 
                                                                 </li>
 								<li>
-                                                                <a href="aboutus.html">About us</a>
+                                                                <a href="about-us.html">About us</a>
                                                                 </li>
                                                                 <li>
                                                                 <a href="services.html">Servies</a> 
