--- a/corporateoffices.html
+++ b/corporateoffices.html
@@ -179,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</section>
 		<!-- Intro Section -->
 		<!-- Service Section -->
-		<section class="padding ptb-xs-40">
+		<center><section class="padding ptb-xs-40">
 			<div class="container">
 				<div class="row pb-30 text-center">
 					<div class="col-md-12">
@@ -194,20 +194,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<div class="col-md-6 col-lg-4 mb-30">
 						
 							<figure>
-								<center><img src="assets/images/service/img_1.jpg" alt="" />
+								<img src="assets/images/service/img_1.jpg" alt="" />
 							</figure>
 							<h3><a href="#">Corporate offices</a></h3>
 							<p>Calvin Janitorial has been serving the corporate industries with its cleaning solution for over 5 years. 
 We have different cleaning package available for different office sizes and cleaning works. A clean 
 corporation shows professionalism and dedication, hence serve as an essential part in bringing new 
 business and clients. We understand this point of view and provide our best to suit your business needs.</p>
-						</div></center>
+						</div>
 					</div>
 
 					
 									</div>
 
-			</div>
+			</div></center>
 		</section>
 		<!-- Service Section end -->
 
