--- a/corporateoffices.html
+++ b/corporateoffices.html
@@ -179,19 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</section>
 		<!-- Intro Section -->
 		<!-- Service Section -->
-		<center><section class="padding ptb-xs-40">
-			<div class="container">
-				<div class="row pb-30 text-center">
-					<div class="col-md-12">
-						<div class="section-title_home">
-							<h2>Our <span>Service</span></h2>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-
-					<div class="col-md-6 col-lg-4 mb-30">
+		<center>
 						
 							<figure>
 								<img src="assets/images/service/img_1.jpg" alt="" />
@@ -207,7 +195,7 @@ business and clients. We understand this point of view and provide our best to s
 					
 									</div>
 
-			</div></center>
+			</div>
 		</section>
 		<!-- Service Section end -->
 
