--- a/corporateoffices.html
+++ b/corporateoffices.html
@@ -179,9 +179,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</section>
 		<!-- Intro Section -->
 		<!-- Service Section -->
-		<center>
-						
-							<figure>
+		
+						<br>
+							<center><figure>
 								<img src="assets/images/service/img_1.jpg" alt="" />
 							</figure>
 							<h3><a href="#">Corporate offices</a></h3>
