--- a/business.html
+++ b/business.html
@@ -179,48 +179,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</section>
 		<!-- Intro Section -->
 		<!-- Service Section -->
-		<section class="padding ptb-xs-40">
-			<div class="container">
-				<div class="row pb-30 text-center">
-					<div class="col-md-12">
-						<div class="section-title_home">
-							<h2>Our <span>Service</span></h2>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-
-					<div class="col-md-6 col-lg-4 mb-30">
-						<div class="service_box">
-							<figure>
-								<img src="assets/images/service/img_1.jpg" alt="" />
-							</figure>
-							<h3><a href="#">Corporate offices</a></h3>
-							<p>Calvin Janitorial has been serving the corporate industries with its cleaning solution for over 5 years. 
-We have different cleaning package available for different office sizes and cleaning works. A clean 
-corporation shows professionalism and dedication, hence serve as an essential part in bringing new 
-business and clients. We understand this point of view and provide our best to suit your business needs.</p>
-						</div>
-					</div>
-
-					<div class="col-md-6 col-lg-4 mb-xs-30">
-						<div class="service_box">
-							<figure>
-								<img src="assets/images/service/img_2.jpg" alt="" />
-							</figure>
-							<h3><a href="#">Commercial property</a></h3>
-							<p>Our company provide wide variety of services covering majority of the needs of a commercial 
-environment. Calvin janitorial always welcome new challenges which help us to offer more techniques 
-on the table. We provide commercial cleaning contracts at competitive and affordable rates. We work 
-alongside the employees and customers to provide them the convenient and professional service 
-possible</p>
-						</div>
-					</div>
-
-					<div class="col-md-6 col-lg-4 mb-sm-30 mb-xs-30">
-						<div class="service_box">
-							<figure>
+		
+						<br>
+							<center><figure>
 								<img src="assets/images/service/img_3.jpg" alt="" />
 							</figure>
 							<h3><a href="#">Business</a></h3>
@@ -238,19 +199,7 @@ services are as follows :-
 						</div>
 					</div>
 
-					<div class="col-md-6 col-lg-4 mb-xs-30">
-						<div class="service_box">
-							<figure>
-								<img src="assets/images/service/img_6.jpg" alt="" />
-							</figure>
-							<h3><a href="#">Building Cleaning</a></h3>
-							<p>Calvin Janitorial also provide on time service to apartment building and town homes. Our one of a kind 
-service focus on thorough cleaning by working alongside with the tenants and habitats. We understand 
-the importance of safe and healthy atmosphere needed in any kind of habitat. Therefore, we clean it by 
-considering as our own home. </p>
-						</div>
-					</div>
-
+					
 									</div>
 
 			</div>
