--- a/about-us.html
+++ b/about-us.html
@@ -265,10 +265,10 @@ centers, daycare centers, athletic clubs and gyms. </p>
 								<figure class="testimonial-img">
 									<img class="img-circle img-border" src="assets/images/testimonial/1.jpg" alt="">
 								</figure>
-								<h3 class="testimonial-author">Selly Thomas</h3>
+								<h3 class="testimonial-author">Michelle Delage</h3>
 								<hr class="small-divider">
 								<p>
-									At vero eos et accusamus et iusto odio dignissimos ducimus qui.
+									Great service boss. Affordable service provider in area. My hat is off to Calvin Janitorial Services.
 								</p>
 								<span class="star"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> </span>
 							</div>
@@ -278,10 +278,10 @@ centers, daycare centers, athletic clubs and gyms. </p>
 								<figure class="testimonial-img">
 									<img class="img-circle img-border" src="assets/images/testimonial/2.jpg" alt="">
 								</figure>
-								<h3 class="testimonial-author writer">Jane Anselmo</h3>
+								<h3 class="testimonial-author writer">Janine</h3>
 								<hr class="small-divider">
 								<p>
-									At vero eos et accusamus et iusto odio dignissimos ducimus qui.
+									Best Company. The team of Calvin Janitorial Services is very hard working and i appreciate their efforts.
 								</p>
 								<span class="star"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> </span>
 							</div>
@@ -291,10 +291,10 @@ centers, daycare centers, athletic clubs and gyms. </p>
 								<figure class="testimonial-img">
 									<img class="img-circle img-border" src="assets/images/testimonial/3.jpg" alt="">
 								</figure>
-								<h3 class="testimonial-author">Melissa O’Barry</h3>
+								<h3 class="testimonial-author">Christian</h3>
 								<hr class="small-divider">
 								<p>
-									At vero eos et accusamus et iusto odio dignissimos ducimus qui.
+									I am very thankful to Calvin Janitorial Services for their services. Thank you so much for your excellent and professional work.
 								</p>
 								<span class="star"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> </span>
 							</div>
