connect with socail

--- a/index.html
+++ b/index.html
@@ -580,10 +580,10 @@ centers, daycare centers, athletic clubs and gyms. </p>
 						
 						<ul>
 							<li>
-								<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+								<a href="https://www.facebook.com/Calvin-Janitorial-Services-102304917999429/?view_public_for=102304917999429"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+								<a href="https://www.instagram.com/iamcalvinjanitorialservices/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 							</li>
 							
 						</ul>
