--- a/services.html
+++ b/services.html
@@ -83,8 +83,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						</div>
 						<div class="col-sm-5">
 							<div class="social-link__block text-right">
-								<a href="#" class="facebook"> <i class="fa fa-facebook"></i> </a>
-								<a href="#" class="instagram"> <i class="fab fa-instagram"></i> </a>
+								<a href="https://www.facebook.com/Calvin-Janitorial-Services-102304917999429/?view_public_for=102304917999429" class="facebook"> <i class="fa fa-facebook"></i> </a>
+								<a href="https://www.instagram.com/iamcalvinjanitorialservices/" class="instagram"> <i class="fab fa-instagram"></i> </a>
 
 							</div>
 						</div>
@@ -254,10 +254,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						
 						<ul>
 							<li>
-								<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+								<a href="https://www.facebook.com/Calvin-Janitorial-Services-102304917999429/?view_public_for=102304917999429"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+								<a href="https://www.instagram.com/iamcalvinjanitorialservices/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 							</li>
 							
 						</ul>
