--- a/index.html
+++ b/index.html
@@ -299,6 +299,23 @@ professional that primarily provide janitorial services for offices, schools, ed
 centers, daycare centers, athletic clubs and gyms. </p>
 					</div>
 				</div>
+<section class="padding ptb-xs-40">
+			<div class="container">
+				<div class="row pb-30">
+					<div class="col-md-4 d-flex align-items-center">
+						<div class="section_tit">
+							<h2>About Us</h2>
+							<span class="b-line l-left sm-l-center"></span>
+						</div>
+					</div>
+
+					<div class="col-md-8 mt-xs-30 text-center text-md-left">
+						<p>Calvin janitorial is a professional cleaning company based in metro Vancouver providing services to lower 
+mainland with professional and qualified cleaners. We have a dedicated team of qualified cleaning 
+professional that primarily provide janitorial services for offices, schools, educational facilities, medical 
+centers, daycare centers, athletic clubs and gyms. </p>
+					</div>
+				</div>
 
 				<div class="row mt-30 mt-xs-0">
 					<div class="col-lg-3 col-md-6">
