--- a/index.html
+++ b/index.html
@@ -304,16 +304,17 @@ centers, daycare centers, athletic clubs and gyms. </p>
 				<div class="row pb-30">
 					<div class="col-md-4 d-flex align-items-center">
 						<div class="section_tit">
-							<h2>About Us</h2>
+							<h2>Why Calvin Janitorial Services?</h2>
 							<span class="b-line l-left sm-l-center"></span>
 						</div>
 					</div>
 
 					<div class="col-md-8 mt-xs-30 text-center text-md-left">
-						<p>Calvin janitorial is a professional cleaning company based in metro Vancouver providing services to lower 
-mainland with professional and qualified cleaners. We have a dedicated team of qualified cleaning 
-professional that primarily provide janitorial services for offices, schools, educational facilities, medical 
-centers, daycare centers, athletic clubs and gyms. </p>
+						<p>Calvin janitorial services is a professional and No: 1 cleaning company that offers a wide range of services that will fit everyone’s pocket. We have professional and qualified cleaners who know how to choose the best product for cleaning.
+2 Years Of Trust: It’s been more than 2 years of trust which we have built with our clients by staying on their expectations.
+First-class Cleaning Company: We always go above and beyond the cleaning expectations of our clients by delivering high-quality services which they will never get from anyone in this industry.
+Expert Hygiene: We provide a hygiene environment for customers and employees and protect them from viruses and harmful bacteria or germs.
+Save Time and Pocket-Friendly Cleaning Services: You can reduce your spending and time by  20-25% on cleanliness through out-source cleaning services rather than in-source cleaning services by ensuring a spotless, disinfected environment.</p>
 					</div>
 				</div>
 
