--- a/index.html
+++ b/index.html
@@ -296,7 +296,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<p>Calvin janitorial is a professional cleaning company based in metro Vancouver providing services to lower 
 mainland with professional and qualified cleaners. We have a dedicated team of qualified cleaning 
 professional that primarily provide janitorial services for offices, schools, educational facilities, medical 
-centers, daycare centers, athletic clubs and gyms. </p>
+centers, daycare centers, athletic clubs and gyms.<br>A healthy and clean environment in a company is a necessity for all businesses, especially in this pandemic. It is not only good for employees who are working in a company but also for the customers. It is our commitment to provide the best janitorial services by delivering the highest quality of cleanliness so that anyone who will visit your office, will never forget the experience. We are the top-notch Janitorial and Cleaning service providers in Surrey, British Columbia. Let us give us a chance to assist you with all your cleaning and decontaminate responsibilities. we will never let your image down due to un-cleanliness at your place. We will surely stay at your expectations.
+
+Any Building, Any Office, Any School, Any Medical Center, We Clean Everything!
+We are majorly providing cleaning services for offices, schools, educational facilities, medical centers, daycare centers, athletic clubs, and gyms. Our cleaning services are not limited to the buildings and offices, we are providing janitorial services for every place, such as Industrial cleaning, Hospitality Cleaning, Religious Building Cleaning, etc.
+
+If you are not satisfied with your previous Janitorial Service or cleaning service providers and have gotten tired of replacing many janitorial services companies, no need to bother about the cleanliness of your facility. Just call Calvin Cleaning Services Surrey to get first-class cleaning services. We commit you to serve the expert and professional services with exceptional outcomes you can depend on day and night.
+ </p>
 					</div>
 				</div>
 <section class="padding ptb-xs-40">
@@ -304,7 +310,7 @@ centers, daycare centers, athletic clubs and gyms. </p>
 				<div class="row pb-30">
 					<div class="col-md-4 d-flex align-items-center">
 						<div class="section_tit">
-							<h2>Why Calvin Janitorial Services?</h2>
+							<h2>Why Calvin Janitorial?</h2>
 							<span class="b-line l-left sm-l-center"></span>
 						</div>
 					</div>
