--- a/index.html
+++ b/index.html
@@ -321,6 +321,30 @@ If you are not satisfied with your previous Janitorial Service or cleaning servi
 First-class Cleaning Company: We always go above and beyond the cleaning expectations of our clients by delivering high-quality services which they will never get from anyone in this industry.
 Expert Hygiene: We provide a hygiene environment for customers and employees and protect them from viruses and harmful bacteria or germs.
 Save Time and Pocket-Friendly Cleaning Services: You can reduce your spending and time by  20-25% on cleanliness through out-source cleaning services rather than in-source cleaning services by ensuring a spotless, disinfected environment.</p>
+
+<section class="padding ptb-xs-40">
+			<div class="container">
+				<div class="row pb-30">
+					<div class="col-md-4 d-flex align-items-center">
+						<div class="section_tit">
+							<h2>How do we work?</h2>
+							<span class="b-line l-left sm-l-center"></span>
+						</div>
+					</div>
+
+					<div class="col-md-8 mt-xs-30 text-center text-md-left">
+						<p>The perfect execution of a plan will always get the best results. At Calvin cleaning company we have a proper strategy to fulfill our customers’ needs according to their requirements.
+Firstly, we will get familiar with your facility so that we can get to know about your requirements. Afterward, we will decide the budget and you will choose the time when you want our services. We will always keep in mind that your employees and customers always have a clean, healthy and safe environment.
+
+Our Janitorial Services include:
+●    Various options to choose from daily, weekly and monthly cleaning services
+●    Dusting and window washing
+●    Restroom cleaning
+●    Hard-surface floor sweeping and mopping
+●    Garbage and waste removal
+●    Routine Carpet cleaning
+●    All desks and equipment dusting and cleaning
+</p>
 					</div>
 				</div>
 
