--- a/index.html
+++ b/index.html
@@ -333,18 +333,11 @@ Save Time and Pocket-Friendly Cleaning Services: You can reduce your spending an
 					</div>
 
 					<div class="col-md-8 mt-xs-30 text-center text-md-left">
-						<p>The perfect execution of a plan will always get the best results. At Calvin cleaning company we have a proper strategy to fulfill our customers’ needs according to their requirements.
-Firstly, we will get familiar with your facility so that we can get to know about your requirements. Afterward, we will decide the budget and you will choose the time when you want our services. We will always keep in mind that your employees and customers always have a clean, healthy and safe environment.
-
-Our Janitorial Services include:
-●    Various options to choose from daily, weekly and monthly cleaning services
-●    Dusting and window washing
-●    Restroom cleaning
-●    Hard-surface floor sweeping and mopping
-●    Garbage and waste removal
-●    Routine Carpet cleaning
-●    All desks and equipment dusting and cleaning
-</p>
+						<p>Calvin janitorial services is a professional and No: 1 cleaning company that offers a wide range of services that will fit everyone’s pocket. We have professional and qualified cleaners who know how to choose the best product for cleaning.
+2 Years Of Trust: It’s been more than 2 years of trust which we have built with our clients by staying on their expectations.
+First-class Cleaning Company: We always go above and beyond the cleaning expectations of our clients by delivering high-quality services which they will never get from anyone in this industry.
+Expert Hygiene: We provide a hygiene environment for customers and employees and protect them from viruses and harmful bacteria or germs.
+Save Time and Pocket-Friendly Cleaning Services: You can reduce your spending and time by  20-25% on cleanliness through out-source cleaning services rather than in-source cleaning services by ensuring a spotless, disinfected environment.</p>
 					</div>
 				</div>
 
