--- a/index.html
+++ b/index.html
@@ -326,6 +326,32 @@ Save Time and Pocket-Friendly Cleaning Services: You can reduce your spending an
 					</div>
 				</div>
 
+<section class="padding ptb-xs-40">
+			<div class="container">
+				<div class="row pb-30">
+					<div class="col-md-4 d-flex align-items-center">
+						<div class="section_tit">
+							<h2>How do we work?</h2>
+							<span class="b-line l-left sm-l-center"></span>
+						</div>
+					</div>
+
+					<div class="col-md-8 mt-xs-30 text-center text-md-left">
+						<p>The perfect execution of a plan will always get the best results. At Calvin cleaning company we have a proper strategy to fulfill our customers’ needs according to their requirements.
+Firstly, we will get familiar with your facility so that we can get to know about your requirements. Afterward, we will decide the budget and you will choose the time when you want our services. We will always keep in mind that your employees and customers always have a clean, healthy and safe environment.
+
+Our Janitorial Services include:
+●    Various options to choose from daily, weekly and monthly cleaning services
+●    Dusting and window washing
+●    Restroom cleaning
+●    Hard-surface floor sweeping and mopping
+●    Garbage and waste removal
+●    Routine Carpet cleaning
+●    All desks and equipment dusting and cleaning
+</p>
+					</div>
+				</div>
+
 				<div class="row mt-30 mt-xs-0">
 					<div class="col-lg-3 col-md-6">
 						<div class="clean_top mb-xs-30 feature-box">
