--- a/index.html
+++ b/index.html
@@ -341,12 +341,12 @@ Save Time and Pocket-Friendly Cleaning Services: You can reduce your spending an
 Firstly, we will get familiar with your facility so that we can get to know about your requirements. Afterward, we will decide the budget and you will choose the time when you want our services. We will always keep in mind that your employees and customers always have a clean, healthy and safe environment.
 
 Our Janitorial Services include:
-●    Various options to choose from daily, weekly and monthly cleaning services
-●    Dusting and window washing
-●    Restroom cleaning
-●    Hard-surface floor sweeping and mopping
-●    Garbage and waste removal
-●    Routine Carpet cleaning
+●    Various options to choose from daily, weekly and monthly cleaning services<br>
+●    Dusting and window washing<br>
+●    Restroom cleaning<br>
+●    Hard-surface floor sweeping and mopping<br>
+●    Garbage and waste removal<br>
+●    Routine Carpet cleaning<br>
 ●    All desks and equipment dusting and cleaning
 </p>
 					</div>
