--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@ If you are not satisfied with your previous Janitorial Service or cleaning servi
  </p>
 					</div>
 				</div>
+<!-- Why Calvin Janitorial? -->
 <section class="padding ptb-xs-40">
 			<div class="container">
 				<div class="row pb-30">
@@ -325,7 +326,7 @@ Save Time and Pocket-Friendly Cleaning Services: You can reduce your spending an
 
 					</div>
 				</div>
-
+<!-- How do we work? -->
 <section class="padding ptb-xs-40">
 			<div class="container">
 				<div class="row pb-30">
