--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	
 
-<head>
+<head>google-site-verification=3CzWTi0gYjSfTf5RmqAS05yR8WtEGSwTE1o3gPylomw
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-183335236-1"></script>
 <script>
